--- a/init.aries.rc
+++ b/init.aries.rc
@@ -16,11 +16,12 @@ on init
 #   FIXME: Market checks this variable for space-checking, but downloads to /datadata
     export DOWNLOAD_CACHE /data/download
 
-    setprop ro.vold.primary_physical 1
+#    setprop ro.vold.primary_physical 1
 
     # for backwards compatibility
-    symlink /sdcard /mnt/sdcard
-    symlink /sdcard /storage/sdcard
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard		     
+    symlink /storage/sdcard1 /external_sd		     
 
     mkdir /datadata 0771 system system
 
