--- a/rootdir/init.aries.rc
+++ b/rootdir/init.aries.rc
@@ -11,10 +11,9 @@ on init
     setprop ro.vold.primary_physical 1
 
     # for backwards compatibility
-    symlink /sdcard /mnt/sdcard
     symlink /sdcard /storage/sdcard
 
-    mkdir /datadata 0771 system system
+#    mkdir /datadata 0771 system system
 
 #   We will create our own ril-daemon service in class 'core' because the
 #   rild doesn't like being killed. (During device encryption.)
@@ -57,7 +56,7 @@ on fs
 #   Radio set up
     mkdir /radio 0775 radio radio
     mount yaffs2 mtd@radio /radio
-    mount yaffs2 mtd@datadata /datadata
+#    mount yaffs2 mtd@datadata /datadata
     mount yaffs2 mtd@cache /cache nosuid nodev
     chown radio radio /radio/modem.bin
     restorecon_recursive /radio
@@ -164,9 +163,9 @@ on fs
 
 on post-fs
 
-    chown system system /system
-    chmod 0771 /system
-    restorecon_recursive /datadata
+#    chown system system /system
+#    chmod 0771 /system
+#    restorecon_recursive /datadata
 
 #   Samsung RIL
     symlink /radio/modem.bin /dev/block/bml12
@@ -202,7 +201,7 @@ on post-fs-data
     mkdir /data/data2 0771 system system
 
 #   Setup /datadata
-    start setup_datadata
+#    start setup_datadata
 
 #   Wi-Fi
     mkdir /data/misc/wifi/sockets 0775 wifi wifi
@@ -218,16 +217,17 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 # Setup /datadata
-service setup_datadata /sbin/setupdatadata.sh
-    disabled
-    oneshot
+#service setup_datadata /sbin/setupdatadata.sh
+#    disabled
+#    oneshot
 
 service aries-ril-daemon /system/bin/rild
-    class core
+    class main
     socket rild stream 660 root radio
+    socket sap_uim_socket1 stream 660 bluetooth bluetooth
     socket rild-debug stream 660 radio system
     user root
-    group radio cache inet misc audio log
+    group radio cache inet misc audio log readproc wakelock
 
 # 3D init
 service pvrsrvinit /system/bin/pvrsrvinit
