Attempt to fix wifi issues
Now wifi connects properly after boot, but i'm still unsure if it resolves disconnections

--- a/rootdir/init.aries.rc
+++ b/rootdir/init.aries.rc
@@ -293,7 +293,7 @@ service charger /sbin/healthd -c
     critical
     seclabel u:r:healthd:s0
 
-on property:ril.bt_macaddr=*
+on property:ril.bt_macaddr=* && ril.wifi_macaddr=*
     start bdaddr
 
 # bugreport is triggered by holding down volume down, volume up and power
